<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/app_features">
            <menu>
                <item
                    android:id="@+id/nav_status"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_camera"
                    android:title="@string/menu_camera" />
                <item
                    android:id="@+id/nav_filters"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_filters" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/app_info">
            <menu>
                <item
                    android:id="@+id/nav_privacy"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/menu_privacy" />
                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/menu_rate" />

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/menu_share" />

            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/support">
            <menu>
                <item
                    android:id="@+id/nav_faq"
                    android:icon="@drawable/ic_faq"
                    android:title="@string/menu_faq" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_helpnfeedback"
                    android:title="@string/menu_help" />
            </menu>
        </item>
    </group>
</menu>